# large-scale-system

./: .env  CMakeLists.txt  Dockerfile  docker-compose.sh  docker-compose.yml  vcpkg.json
docker/: gateway.Dockerfile  lb.Dockerfile
docker-compose/: .env  backend.yml  config.yml  docker-compose.sh  frontend.yml  observability.yml
docker/docker-compose/: backend.yml  config.yml  frontend.yml  observability.yml
docker/fluentd/: fluent.conf
docker/gateway/: nginx.conf
docker/lb/: nginx.conf
docker/services/: docker-entry.sh
src/common/: CMakeLists.txt
src/common/src/: utils.cpp  utils.hpp
src/serviceOne/: CMakeLists.txt  config.yml
src/serviceOne/src/: main.cpp
src/serviceThree/: CMakeLists.txt  config.yml
src/serviceThree/src/: ServiceThreeAgent.hpp  ServiceThreeImpl.hpp  main.cpp
src/serviceTre/: CMakeLists.txt  config.yml
src/serviceTre/src/: ServiceTreAgent.hpp  ServiceTreImpl.hpp  main.cpp
src/serviceTwo/: CMakeLists.txt  config.yml
src/serviceTwo/src/: main.cpp
src/web/: CMakeLists.txt  config.yml
src/web/src/: ServiceWebAgent.hpp  ServiceWebImpl.hpp  main.cpp  web.cpp
tests/: services.http
